# billard3d

./: AUTHORS  Makefile.am  TODO  billard3d  billard3d.kdevelop  configure.in  wishlist
3d/: table_01.wings
board_tool/: board_tool.pro
board_tool/include/: board.h  canvas.h  mainform.h
board_tool/src/: canvas.cpp  draw_manager.cpp  main.cpp  mainform.cpp
board_tool/ui/: mainform.ui
doc/: b3d-doc.tex
doc/img/: col.eps  scr01.eps  scr03.eps
doc/tex/: abstract.tex  conclusions.tex  graphics.tex  main.tex  physics.tex  program_usage.tex  testing.tex
shaders/: ball_frag.cg  ball_vert.cg  board_frag.cg
src/: GLquat.h  Makefile.am  bargmgr.cpp  bargmgr.h  bassert.cpp  bassert.h  bautoeventlistener.cpp  bautoeventlistener.h  bball.cpp  bball.h  bballmgr.cpp  bballmgr.h  bband.cpp  bband.h  bboard.cpp  bboard.h  bboarddata.h  bcamera.cpp  bcamera.h  bcg.h  bconfig.h  bconfigreader.cpp  bconfigreader.h  bconst.cpp  bconst.h  bconsteditlogiclayer.cpp  bconsteditvideolayer.cpp  bdraw.cpp  bdraw.h  berrortrace.h  bexceptionstream.cpp  bexceptionstream.h  bfont.cpp  bfont.h  bfontmgr.cpp  bfontmgr.h  bfpstimer.h  bgl.h  billard3d.cpp  binput.cpp  (+55 more)
src/assertion/: Makefile.am  bassert.h  btrace.cpp
src/layers/: Makefile.am  blayermgr.h  blogiclayer.cpp  boptionsvideolayer.cpp  boptionsvideolayer.h  bpauselogiclayer.h  bsimlogiclayer.cpp  bsimvideolayer.cpp  bsimvideolayer.h
src/math/: Makefile.am  Makefile.in  bvector.h  bvector3.cpp  bvector3.h
trunk/: Doxyfile  Makefile.am  billard3d.kdevelop  sdlapp.kdevelop  wishlist
trunk/3d/: table_02.wings
trunk/board_tool/: board_tool.kdevelop
trunk/board_tool/include/: board.h  boardobj.h  canvas.h  draw_manager.h  mainform.h  vector2.h
trunk/board_tool/src/: boardobj.cpp  canvas.cpp  mainform.cpp
trunk/board_tool/ui/: mainform.ui
trunk/doc/: compile.sh
trunk/doc/img/: bb_col.eps  bbd_col.eps  scr02.eps  scr04.eps  scr05.eps
trunk/doc/tex/: abstract.tex  graphics.tex  physics.tex  program_usage.tex  testing.tex  title.tex
trunk/shaders/: ball_frag.cg  ball_vert.cg  board_frag.cg
trunk/src/: GLquat.c  Makefile.am  bargmgr.h  bassert.cpp  bassert.h  bautoeventlistener.cpp  bball.cpp  bball.h  bballmgr.cpp  bballmgr.h  bband.cpp  bband.h  bboard.cpp  bboard.h  bboarddata.h  bcamera.cpp  bcamera.h  bconfig.cpp  bconst.h  bconsteditlogiclayer.cpp  bconsteditvideolayer.h  bdraw.cpp  bdraw.h  beventlistener.cpp  beventlistener.h  bexception.cpp  bexception.h  bexceptionstream.cpp  bexceptionstream.h  bfont.cpp  bfont.h  bfontmgr.cpp  bfontmgr.h  bfpstimer.cpp  bfpstimer.h  bgl.h  billard3d.cpp  binput.cpp  binput.h  blayermgr.cpp  (+58 more)
trunk/src/assertion/: Makefile.in  bassert.cpp  berrortrace.cpp  bexception.h
trunk/src/boards/: bboarddata.h  def_bboarddata.h
trunk/src/fonts/: font01.h  font02.h
trunk/src/layers/: Makefile.in  bconsteditlogiclayer.h  boptionslogiclayer.h  bsimlogiclayer.h  bsynclogiclayer.cpp  bsyncvideolayer.cpp  bsyncvideolayer.h  bvideolayer.h
trunk/src/math/: Makefile.am  bquaternion.cpp  bsincos.h  bvector.cpp
trunk/templates/: h
trunk/win32/: b3d.sln  b3d.vcproj  b3d_vsnet.vcproj
uml/: billard3d.xmi
win32/: b3d.sln  b3d.vcproj  b3d_vsnet.sln  b3d_vsnet.vcproj
